--- a/output.css
+++ b/output.css
@@ -1048,6 +1048,15 @@ video {
   width: 100%;
 }
 
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.w-\[500px\] {
+  width: 500px;
+}
+
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -1115,6 +1124,16 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-y-\[200px\] {
+  --tw-translate-y: 200px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[50vh\] {
+  --tw-translate-y: 50vh;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .\!transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
 }
@@ -1133,6 +1152,86 @@ video {
 
 .transform-none {
   transform: none;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateY(200px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+.animate-\[slide_\.8s_ease-in-out_1s_1_forwards\] {
+  animation: slide .8s ease-in-out 1s 1 forwards;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateY(200px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+.animate-\[slide_1s_ease-in-out_\.1s_1_forwards\] {
+  animation: slide 1s ease-in-out .1s 1 forwards;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateY(200px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+.animate-\[slide_1s_ease-in-out_\.2s_1_forwards\] {
+  animation: slide 1s ease-in-out .2s 1 forwards;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateY(200px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+.animate-\[slide_1s_ease-in-out_\.5s_1_forwards\] {
+  animation: slide 1s ease-in-out .5s 1 forwards;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateY(200px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+.animate-\[slide_1s_ease-in-out_1_forwards\] {
+  animation: slide 1s ease-in-out 1 forwards;
 }
 
 .cursor-pointer {
@@ -2029,6 +2128,10 @@ video {
 
 .border-2 {
   border-width: 2px;
+}
+
+.border-4 {
+  border-width: 4px;
 }
 
 .border-x {
@@ -3124,6 +3227,10 @@ video {
   .sm\:w-max {
     width: -moz-max-content;
     width: max-content;
+  }
+
+  .sm\:w-\[600px\] {
+    width: 600px;
   }
 
   .sm\:basis-\[50\%\] {
