--- a/output.css
+++ b/output.css
@@ -1048,15 +1048,6 @@ video {
   width: 100%;
 }
 
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.w-\[500px\] {
-  width: 500px;
-}
-
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -1079,10 +1070,6 @@ video {
 
 .basis-\[50\%\] {
   flex-basis: 50%;
-}
-
-.basis-\[80\%\] {
-  flex-basis: 80%;
 }
 
 .table-auto {
@@ -1131,6 +1118,11 @@ video {
 
 .translate-y-\[50vh\] {
   --tw-translate-y: 50vh;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[200px\] {
+  --tw-translate-x: 200px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1232,6 +1224,54 @@ video {
 
 .animate-\[slide_1s_ease-in-out_1_forwards\] {
   animation: slide 1s ease-in-out 1 forwards;
+}
+
+@keyframes slideImg {
+  0% {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+
+  fadeIn 0% {
+    opacity: 0;
+  }
+
+  fadeIn 100% {
+    opacity: 1;
+  }
+}
+
+.animate-\[slideImg_\.8s_ease-in-out_1s_1_forwards\] {
+  animation: slideImg .8s ease-in-out 1s 1 forwards;
+}
+
+@keyframes slideImg {
+  0% {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+
+  fadeIn 0% {
+    opacity: 0;
+  }
+
+  fadeIn 100% {
+    opacity: 1;
+  }
+}
+
+.animate-\[slideImg_\.8s_ease-in-out_1_forwards\] {
+  animation: slideImg .8s ease-in-out 1 forwards;
 }
 
 .cursor-pointer {
@@ -2124,14 +2164,6 @@ video {
 
 .border {
   border-width: 1px;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
-.border-4 {
-  border-width: 4px;
 }
 
 .border-x {
@@ -3227,10 +3259,6 @@ video {
   .sm\:w-max {
     width: -moz-max-content;
     width: max-content;
-  }
-
-  .sm\:w-\[600px\] {
-    width: 600px;
   }
 
   .sm\:basis-\[50\%\] {
